# InfraNexus

./: .gitignore  .instructions.md  InfraNexus_Implementation_PLan.txt  README.md  docker-compose.yml
.github/: copilot-instructions.md
.instructions/: backend.instructions.md  etl.instructions.md  frontend.instructions.md  infrastructure.instructions.md
backend/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: config.py  dependencies.py  exceptions.py  logging.py  main.py
backend/app/core/: kuzu_manager.py  meili_manager.py  redis_manager.py  stubs.py  ws_manager.py
backend/app/middleware/: rate_limit.py  request_id.py  timing.py
backend/app/models/: base.py  ci.py  etl.py  graph.py  health.py  search.py
backend/app/queries/: ci.py  neighborhood.py  path.py  search.py  stats.py
backend/app/routers/: ci.py  etl.py  graph.py  health.py  search.py  ws.py
backend/app/services/: cache_service.py  ci_service.py  graph_service.py  layout_service.py  search_service.py
backend/etl/: kuzu_loader.py  meili_indexer.py  runner.py  scheduler.py  snow_client.py  state_manager.py  transformer.py  validator.py
backend/tests/: conftest.py
backend/tests/api/: test_graph_api.py  test_health_api.py  test_search_api.py
backend/tests/unit/: test_cache_keys.py  test_models.py  test_snow_client.py  test_transformer.py  test_validator.py
docs/: BACKEND_PLAN.md  FEATURES.md  FRONTEND_PLAN.md  PRODUCT_BLUEPRINT_E2E.md  PRODUCT_BLUEPRINT_PICTURE.md  PRODUCT_PLAN.md
frontend/: .env.example  Dockerfile  README.md  next.config.ts  (+3 more)
(+68 files in other folders)
