[project]
name = "infranexus-backend"
version = "0.1.0"
description = "InfraNexus - ServiceNow CMDB Graph Visualizer Backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "kuzu>=0.7.0",
    "redis[hiredis]>=5.2.0",
    "meilisearch-python-sdk>=3.8.0",
    "httpx>=0.28.0",
    "structlog>=24.4.0",
    "msgpack>=1.1.0",
    "apscheduler>=3.10.0",
    "networkx>=3.4.0",
    "websockets>=14.0",
    "orjson>=3.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "httpx>=0.28.0",
    "fakeredis[lua]>=2.26.0",
    "coverage>=7.6.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]
load = [
    "locust>=2.32.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "ASYNC"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.coverage.run]
source = ["app", "etl"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
